# tara

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: signoz-tracing-runbook.md
scripts/: phase0_inspect.py
tara-ingest/: Cargo.toml
tara-ingest/src/: dedup.rs  main.rs  parse.rs  writer.rs
tara-query/: Cargo.toml
tara-query/src/: context.rs  h3_udf.rs  lib.rs  provider.rs  queries.rs
tara-query/tests/: common.rs  density_test.rs  gap_detection_test.rs  pushdown_test.rs  window_function_test.rs
tara-server/: Cargo.toml
tara-server/src/: main.rs
tara-store/: Cargo.toml
tara-store/src/: builder.rs  chunk.rs  index.rs  lib.rs  schema.rs  telemetry.rs
