[workspace]
resolver = "2"
members = [
    "tara-ingest",
    "tara-store",
    "tara-query",
    "tara-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache 2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "grpc-tonic"] }
