[package]
name = "tara-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arrow = { version = "59.0.0", features = ["ipc"] }
csv.workspace = true
tara-store = { version = "0.1.0", path = "../tara-store" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
