[package]
name = "tara-query"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
datafusion = "54.0.0"
futures = "0.3.32"
tara-store = { version = "0.1.0", path = "../tara-store" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
