[package]
name = "tara-store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arrow = { version = "59.0.0", features = ["ipc"] }
h3o = "0.10.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
